--- a/.github/workflows/many-platforms.yml
+++ b/.github/workflows/many-platforms.yml
@@ -115,6 +115,8 @@ jobs:
             ${{ env.package }}-*/build/config.log
             ${{ env.package }}-*/build/config.status
             ${{ env.package }}-*/build/log[123]
+            ${{ env.package }}-*/build/tests/test-suite.log
+            ${{ env.package }}-*/build/gnulib-tests/test-suite.log
           retention-days: 7
           overwrite: true
   check-linux-gnu-centos:
@@ -158,6 +160,8 @@ jobs:
             ${{ env.package }}-*/build/config.log
             ${{ env.package }}-*/build/config.status
             ${{ env.package }}-*/build/log[123]
+            ${{ env.package }}-*/build/tests/test-suite.log
+            ${{ env.package }}-*/build/gnulib-tests/test-suite.log
           retention-days: 7
           overwrite: true
   check-linux-gnu-alma:
@@ -203,6 +207,8 @@ jobs:
             ${{ env.package }}-*/build/config.log
             ${{ env.package }}-*/build/config.status
             ${{ env.package }}-*/build/log[123]
+            ${{ env.package }}-*/build/tests/test-suite.log
+            ${{ env.package }}-*/build/gnulib-tests/test-suite.log
           retention-days: 7
           overwrite: true
   check-linux-alpine:
@@ -244,6 +250,8 @@ jobs:
             ${{ env.package }}-*/build/config.log
             ${{ env.package }}-*/build/config.status
             ${{ env.package }}-*/build/log[123]
+            ${{ env.package }}-*/build/tests/test-suite.log
+            ${{ env.package }}-*/build/gnulib-tests/test-suite.log
           retention-days: 7
           overwrite: true
   check-macos:
@@ -285,6 +293,8 @@ jobs:
             ${{ env.package }}-*/build/config.log
             ${{ env.package }}-*/build/config.status
             ${{ env.package }}-*/build/log[123]
+            ${{ env.package }}-*/build/tests/test-suite.log
+            ${{ env.package }}-*/build/gnulib-tests/test-suite.log
           retention-days: 7
           overwrite: true
   check-freebsd:
@@ -331,6 +341,8 @@ jobs:
             ${{ env.package }}-*/build/config.log
             ${{ env.package }}-*/build/config.status
             ${{ env.package }}-*/build/log[123]
+            ${{ env.package }}-*/build/tests/test-suite.log
+            ${{ env.package }}-*/build/gnulib-tests/test-suite.log
           retention-days: 7
           overwrite: true
   check-netbsd:
@@ -378,6 +390,8 @@ jobs:
             ${{ env.package }}-*/build/config.log
             ${{ env.package }}-*/build/config.status
             ${{ env.package }}-*/build/log[123]
+            ${{ env.package }}-*/build/tests/test-suite.log
+            ${{ env.package }}-*/build/gnulib-tests/test-suite.log
           retention-days: 7
           overwrite: true
   check-openbsd:
@@ -427,6 +441,8 @@ jobs:
             ${{ env.package }}-*/build/config.log
             ${{ env.package }}-*/build/config.status
             ${{ env.package }}-*/build/log[123]
+            ${{ env.package }}-*/build/tests/test-suite.log
+            ${{ env.package }}-*/build/gnulib-tests/test-suite.log
           retention-days: 7
           overwrite: true
   check-solaris11:
@@ -474,6 +490,8 @@ jobs:
             ${{ env.package }}-*/build/config.log
             ${{ env.package }}-*/build/config.status
             ${{ env.package }}-*/build/log[123]
+            ${{ env.package }}-*/build/tests/test-suite.log
+            ${{ env.package }}-*/build/gnulib-tests/test-suite.log
           retention-days: 7
           overwrite: true
   check-solaris11-omnios:
@@ -519,6 +537,8 @@ jobs:
             ${{ env.package }}-*/build/config.log
             ${{ env.package }}-*/build/config.status
             ${{ env.package }}-*/build/log[123]
+            ${{ env.package }}-*/build/tests/test-suite.log
+            ${{ env.package }}-*/build/gnulib-tests/test-suite.log
           retention-days: 7
           overwrite: true
   check-cygwin:
@@ -580,6 +600,8 @@ jobs:
             ${{ env.package }}-*/build/config.log
             ${{ env.package }}-*/build/config.status
             ${{ env.package }}-*/build/log[123]
+            ${{ env.package }}-*/build/tests/test-suite.log
+            ${{ env.package }}-*/build/gnulib-tests/test-suite.log
           retention-days: 7
           overwrite: true
   check-mingw:
@@ -644,6 +666,8 @@ jobs:
             ${{ env.package }}-*/build/config.log
             ${{ env.package }}-*/build/config.status
             ${{ env.package }}-*/build/log[123]
+            ${{ env.package }}-*/build/tests/test-suite.log
+            ${{ env.package }}-*/build/gnulib-tests/test-suite.log
           retention-days: 7
           overwrite: true
   check-msvc:
@@ -743,6 +767,8 @@ jobs:
             ${{ env.package }}-*/build/config.log
             ${{ env.package }}-*/build/config.status
             ${{ env.package }}-*/build/log[123]
+            ${{ env.package }}-*/build/tests/test-suite.log
+            ${{ env.package }}-*/build/gnulib-tests/test-suite.log
           retention-days: 7
           overwrite: true
   # This is not a platform-specific test, but very useful for finding bugs.
@@ -783,6 +809,8 @@ jobs:
             ${{ env.package }}-*/build/config.log
             ${{ env.package }}-*/build/config.status
             ${{ env.package }}-*/build/log[123]
+            ${{ env.package }}-*/build/tests/test-suite.log
+            ${{ env.package }}-*/build/gnulib-tests/test-suite.log
           retention-days: 7
           overwrite: true
   # This is not a platform-specific test, but very useful for finding ISO C23 compliance bugs.
@@ -827,5 +855,7 @@ jobs:
             ${{ env.package }}-*/build/config.log
             ${{ env.package }}-*/build/config.status
             ${{ env.package }}-*/build/log[123]
+            ${{ env.package }}-*/build/tests/test-suite.log
+            ${{ env.package }}-*/build/gnulib-tests/test-suite.log
           retention-days: 7
           overwrite: true
