--- a/.github/workflows/many-platforms.yml
+++ b/.github/workflows/many-platforms.yml
@@ -607,6 +607,8 @@ jobs:
   check-mingw:
     name: make check on mingw
     needs: build-tarball
+    # coreutils relies on the gnulib module 'mountlist', which is not yet ported to native Windows.
+    if: ${{ false }}
     # Doc: https://docs.github.com/en/actions/using-jobs/using-a-matrix-for-your-jobs
     strategy:
       fail-fast: false
@@ -673,6 +675,8 @@ jobs:
   check-msvc:
     name: make check on MSVC
     needs: build-tarball
+    # coreutils relies on the gnulib module 'mountlist', which is not yet ported to native Windows.
+    if: ${{ false }}
     # Doc: https://docs.github.com/en/actions/using-jobs/using-a-matrix-for-your-jobs
     strategy:
       fail-fast: false
