Disable check-cygwin.

--- a/.github/workflows/many-platforms.yml
+++ b/.github/workflows/many-platforms.yml
@@ -611,6 +611,8 @@ jobs:
   check-cygwin:
     name: make check on Cygwin
     needs: build-tarball
+    # Currently disabled, because no one wants to investigate the 7 ERRORs and 38 FAILures.
+    if: ${{ false }}
     # Doc: https://docs.github.com/en/actions/using-jobs/using-a-matrix-for-your-jobs
     strategy:
       fail-fast: false
