--- a/.github/workflows/many-platforms.yml
+++ b/.github/workflows/many-platforms.yml
@@ -262,7 +262,7 @@ jobs:
             cd /work
             ls -l
             export CPPFLAGS="-Wall"
-            ./build-on.sh '${{ env.package }}' '' 'make' 'apk add musl-libintl libacl libattr gmp libcap openssl musl-locales'
+            ./build-on.sh '${{ env.package }}' '' 'make' 'apk add musl-libintl acl-dev acl attr-dev attr gmp libcap openssl musl-locales'
       # Doc: https://docs.github.com/en/actions/using-workflows/storing-workflow-data-as-artifacts
       #      https://github.com/actions/upload-artifact?tab=readme-ov-file#usage
       - if: ${{ always() }}
